--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,4 +19,8 @@ dependencies = [
     "websockets>=15.0.1",
     "pyyaml>=6.0",
     "python-dotenv>=1.0.0",
+    "aiokafka[lz4]>=0.10",
+    "asyncpg>=0.30.0",
+    "dotenv>=0.9.9",
+    "fastapi>=0.116.1",
 ]
