--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PANDASCORE_TOKEN=rpEUd7r7WOqmirBOTqIxeFnz3MgbqhwLjnGWwZb3paM2iNPm0cA
-#LOLESPORTS_API_KEY=0TvQnueqKa5mxJntVWt0w4LpLfEkrV1Ta8rQBb9Z
+LOLESPORTS_API_KEY=0TvQnueqKa5mxJntVWt0w4LpLfEkrV1Ta8rQBb9Z
 #RIOT_API_KEY=YOUR_RIOT_DEV_API_KEY
+PG_DSN=postgresql://seneca:seneca@localhost:5432/seneca
