--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,4 +23,10 @@ dependencies = [
     "asyncpg>=0.30.0",
     "dotenv>=0.9.9",
     "fastapi>=0.116.1",
+    "langchain-community>=0.3.29",
+    "langchain-ollama>=0.3.8",
+    "langchain>=0.3.27",
+    "faiss-cpu>=1.12.0",
+    "ddgs>=9.5.5",
+    "beautifulsoup4>=4.13.5",
 ]
